# ITK-Wasm

./: .babelrc  .gitignore  .npmignore  .npmrc  .readthedocs.yml  AGENTS.md  BREAKING_CHANGES.md  CHANGELOG.md  CITATION.cff  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  ITKKWStyleOverwrite.txt  README.md  README.rst  RELEASE.md  atom.xml  build.js  circle.yml  cypress.config.ts  index.html  itk-module.cmake  itk_wasm_env.bash  karma.conf.cjs  karma.conf.js  package-lock.json  package.json  pixi.toml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rollup.worker.config.js  rollup.worker.min.config.js  setup.py  sitemap.xml  test.js  tsconfig.json  tsconfigWebWorkers.json  update-versions.cjs  webpack.config.cjs  (+1 more)
examples/InputsOutputs/: .gitignore  CMakeLists.txt  InputsOutputs.cxx  index.mjs  package.json
examples/different-input-types/: .gitignore  CMakeLists.txt  different-input-types.cxx  package.json
examples/hello-pipeline/: .gitignore  CMakeLists.txt  hello-pipeline.cxx  package.json
examples/io-types/: .gitignore  CMakeLists.txt  io-types.cxx  package.json
examples/mean-squares-versor-registration/: .gitignore  CMakeLists.txt  environment.yml  mean-squares-versor-registration.cxx  package.json
src/: CMakeLists.txt  IOTypes.js  Image.js  ImageIOIndex.js.in  ImageType.js  Mesh.js  MeshIOIndex.js.in  MeshType.js  MimeToIO.js  MimeToImageIO.js  MimeToMeshIO.js  MimeToPolyDataIO.js  PixelTypes.js  PolyDataIOIndex.js  WorkerPool.js  bufferToTypedArray.js  build-emscripten.js  build-wasi.js  copyImage.js  createWebworkerPromise.js  cxaThreadAtExitShim.cxx  exceptionShim.cxx  exceptionShimInitPrimaryException.cxx  extensionToIO.js  extensionToImageIO.js  extensionToMeshIO.js  extensionToPolyDataIO.js  getExceptionMessage.cxx  getFileExtension.js  getTransferable.js  imageJSComponentToIOComponent.js  imageJSPixelTypeToIOPixelType.js  imageSharedBufferOrCopy.js  index.js  index.ts  initialization.cxx  interfaceJSONNode.js  itk-js-cli.js  itk-wasm-cli.js  itk.js  (+155 more)
src/Bindings/: CMakeLists.txt  VTKExodusFileReader.cxx  VTKLegacyFileReader.cxx  VTKPLYFileReader.cxx  VTKXMLFileReader.cxx  itkBMPImageIOJSBinding.cxx  itkBYUMeshIOJSBinding.cxx  itkBioRadImageIOJSBinding.cxx  itkDCMTKImageIOJSBinding.cxx  itkDICOMImageSeriesReaderJSBinding.cxx  itkDICOMTagReaderJSBinding.cxx  itkFDFImageIOJSBinding.cxx  itkFreeSurferAsciiMeshIOJSBinding.cxx  itkFreeSurferBinaryMeshIOJSBinding.cxx  itkGDCMImageIOJSBinding.cxx  itkGE4ImageIOJSBinding.cxx  itkGE5ImageIOJSBinding.cxx  itkGEAdwImageIOJSBinding.cxx  itkGiplImageIOJSBinding.cxx  itkHDF5ImageIOJSBinding.cxx  itkJPEGImageIOJSBinding.cxx  itkJSONImageIOJSBinding.cxx  itkLSMImageIOJSBinding.cxx  itkMGHImageIOJSBinding.cxx  itkMINCImageIOJSBinding.cxx  itkMRCImageIOJSBinding.cxx  itkMetaImageIOJSBinding.cxx  itkNiftiImageIOJSBinding.cxx  itkNrrdImageIOJSBinding.cxx  itkOBJMeshIOJSBinding.cxx  itkOFFMeshIOJSBinding.cxx  itkPNGImageIOJSBinding.cxx  itkSTLMeshIOJSBinding.cxx  itkScancoImageIOJSBinding.cxx  itkTIFFImageIOJSBinding.cxx  itkVTKImageIOJSBinding.cxx  itkVTKPolyDataMeshIOJSBinding.cxx
src/Docker/: Dockerfile
src/EmscriptenModule/: itkJSIOPost.js  itkJSImageIOPost.js  itkJSImageIOPre.js  itkJSImageIOPre.js.in  itkJSMeshIOPre.js  itkJSMeshIOPre.js.in  itkJSPipelinePre.js  itkJSPipelinePre.js.in  itkJSPolyDataIOPre.js.in  itkJSPost.js
src/WebWorkers/: ImageIO.worker.js  ImageIOWorker.js  MeshIO.worker.js  Pipeline.worker.js
src/bindgen/: camelCase.js  canonical-type.js  demo.js  index.html  interface-json-node-wasi.js  interface-json-node.js  interface-json-type-to-interface-type.js  interfaceJsonTypeToInterfaceType.js  mkdir-p.js  python.js  rollup.browser.config.js  snake-case.js  template.package.json  typescript.js  wasmBinaryInterfaceJson.js  write-if-override-not-present.js
src/browser/: index.ts
src/cast-image/: .gitignore  CMakeLists.txt  index.html  package.json  pnpm-lock.yaml  rollup.node.config.js  vite.config.js
src/core/: BinaryFile.ts  CLIEmscriptenModule.ts  CastImageOptions.ts  EmscriptenModule.ts  FloatTypes.ts  IOTypes.ts  ITKWasmEmscriptenModule.ts  Image.ts  ImageType.ts  IntTypes.ts  InterfaceTypes.ts  JsonCompatible.ts  JsonObject.ts  Matrix.ts  Mesh.ts  MeshType.ts  PipelineInput.ts  PipelineOutput.ts  PixelTypes.ts  PolyData.ts  TextFile.ts  TypedArray.ts  WorkerPool.ts  WorkerPoolFunction.ts  WorkerPoolRunTasksResult.ts  bufferToTypedArray.ts  castImage.ts  copyImage.ts  create-worker-proxy.ts  createWebWorkerPromise.ts  getMatrixElement.ts  getTransferable.ts  getTransferables.ts  imageSharedBufferOrCopy.ts  index.ts  setMatrixElement.js  stackImages.ts  version.ts  vtkPolyData.ts
src/docker/: RELEASE.md  build-docker-images.sh  build.sh  oci_exe.sh  pull.sh  push.sh
src/emscripten-module/: itkJSImageIOPre.js.in  itkJSMeshIOPre.js  itkJSMeshIOPre.js.in  itkJSPipelinePre.js  itkJSPipelinePre.js.in  itkJSPolyDataIOPre.js.in  itkJSPost.js
src/io/: IOPixel.ts  ImageIOBaseEmscriptenModule.ts  ImageIOBaseJSBinding.ts  MeshIOBaseJSBinding.ts  ReadImageArrayBufferOptions.ts  ReadImageDICOMArrayBufferSeriesOptions.ts  ReadImageDICOMFileSeriesOptions.ts  ReadImageFileSeriesOptions.ts  ReadImageFileSeriesResult.ts  ReadImageResult.ts  ReadMeshResult.ts  ReadPolyDataResult.ts  WriteImageOptions.ts  extensionToImageIO.ts  extensionToMeshIO.ts  extensionToPolyDataIO.ts  getFileExtension.ts  imageIOComponentToJSComponent.ts  imageIOPixelTypeToJSPixelType.ts  imageJSComponentToIOComponent.ts  imageJSPixelTypeToIOPixelType.ts  localPathRelativeToModule.ts  meshIOComponentToJSComponent.ts  meshIOPixelTypeToJSPixelType.ts  meshJSComponentToIOComponent.ts  meshJSPixelTypeToIOPixelType.ts  meshToPolyData.ts  meshToPolyDataNode.ts  polyDataToMesh.ts  polyDataToMeshNode.ts  readArrayBuffer.ts  readBlob.ts  readDICOMTags.ts  readDICOMTagsArrayBuffer.ts  readDICOMTagsLocalFile.ts  readFile.ts  readImageArrayBuffer.ts  readImageBlob.ts  readImageDICOMArrayBufferSeries.ts  readImageDICOMFileSeries.ts  (+28 more)
src/node/: index.ts
src/pipeline/: PipelineEmscriptenModule.ts  PipelineInput.ts  PipelineOutput.ts  (+6 more)
(+1346 files in other folders)
