[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itkwasm"
description = "Python interface to itk-wasm WebAssembly (Wasm) modules."
authors = [{name = "Matt McCormick", email = "matt.mccormick@kitware.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
keywords = [
    "itk",
    "imaging",
    "visualization",
]
dynamic = ["version"]

requires-python = ">=3.7"
dependencies = [
    "numpy",
    "typing_extensions",
    "wasmtime; sys_platform != \"emscripten\"",
]

[project.urls]
Home = "https://wasm.itk.org/"
Source = "https://github.com/InsightSoftwareConsortium/itk-wasm"
Issues = "https://github.com/InsightSoftwareConsortium/itk-wasm/issues"

[project.optional-dependencies]
test = [
    "itk>=5.3.0",
    "pytest >=2.7.3",
]
doc = ["sphinx"]

[tool.hatch.version]
path = "itkwasm/__init__.py"
